--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.36.1",
     "globals": "^15.9.0",
+    "tailwindcss": "^3.4.11",
     "typescript-eslint": "^8.5.0"
   }
 }
