--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@types/node": "^16.18.108",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "crypto-js": "^4.2.0",
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
@@ -48,6 +50,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.10.0",
+    "@types/crypto-js": "^4.2.2",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.36.1",
     "globals": "^15.9.0",
